tests/baselines/reference/typeParametersShouldNotBeEqual.errors.txt
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(5,5): error TS2322: Type 'Object' is not assignable to type 'T'.
  'Object' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
    The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?


==== tests/cases/compiler/typeParametersShouldNotBeEqual.ts (2 errors) ====
    function ff<T, U>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Error
        ~
!!! error TS2322: Type '{|U|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|U|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:16
!!! annotated symbol 1 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:13
!!! annotated symbol 2 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:16
!!! annotated symbol 3 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:13
!!! annotated symbol 4 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:13
        x = z;  // Error
        ~
!!! error TS2322: Type '{|Object|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|Object|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:     The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:13
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:13
!!! annotated symbol 4 tests/cases/compiler/typeParametersShouldNotBeEqual.ts:1:13
        z = x;  // Ok
    }
    